welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: not found: type color
def isFacingTrail(c:color):Boolean = {
                    ^